# fallout_sim

./: .gitignore  LICENSE  README.md  SUMMARY.md  fallout_sim.py  fallout_sim2.py  pyproject.toml  requirements.txt  setup.py
examples/: example_api.py  example_config.json  qgis_styles.xml  quick_test.json
fallout_sim/: __init__.py  atmosphere.py  cli.py  output.py  particle.py  simulator.py
tests/: __init__.py  test_simulator.py
